False deadlock detection with -XX:+CIPrintCompileQueue after JDK-8163511

XMLWordPrintable

    • b15

        ## Symptom
        ---------------------------------------------------
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error
        (/home/fool/workspace/jdk-dev/src/hotspot/share/runtime/mutex.cpp:399),
        pid=3842, tid=3846
        # fatal error: acquiring lock JNI weak alloc lock/7 out of order with
        lock tty_lock/3 -- possible deadlock
        #
        # JRE version: OpenJDK Runtime Environment (14.0) (slowdebug build
        14-internal+0-adhoc.fool.jdk-dev)
        # Java VM: OpenJDK 64-Bit Server VM (slowdebug
        14-internal+0-adhoc.fool.jdk-dev, compiled mode, sharing, tiered,
        compressed oops, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0xff529c] Mutex::set_owner_implementation(Thread*)+0x19a
        #
        ---------------------------------------------------

        ## Reproduce
        ---------------------------------------------------
        # just run with debug VMs
        java -Xcomp -XX:+UnlockDiagnosticVMOptions -XX:+CIPrintCompileQueue
        ---------------------------------------------------

              Assignee:
              Jie Fu
              Reporter:
              Jie Fu
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: