8230943: False deadlock detection with -XX:+CIPrintCompileQueue after JDK-8163511

Reviewed-by: dholmes, thartmann